nav bar ver 1 + font + scroll style

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0b19ffb3-5190-4c8a-95df-9c8150db6076"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
