--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e8caacd3-7a18-43b6-ae4d-316a2bc25cd9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
