--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primeicons": "^5.0.0",
     "primeng": "^12.2.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
